Updated the readme file

--- a/README.Rmd
+++ b/README.Rmd
@@ -15,42 +15,37 @@ knitr::opts_chunk$set(
 
 # sciColours
 
-<!-- badges: start -->
-<!-- badges: end -->
-
-The goal of sciColours is to ...
+sciColours is a package containing the corporate colour schemes of SCIF. 
 
 ## Installation
 
-You can install the released version of sciColours from [CRAN](https://CRAN.R-project.org) with:
-
-``` r
-install.packages("sciColours")
-```
-
-And the development version from [GitHub](https://github.com/) with:
+You can install the released version of sciColours from [GitHub](https://github.com/) with:
 
 ``` r
 # install.packages("devtools")
 devtools::install_github("gronert-m/sciColours")
 ```
-## Example
-
-This is a basic example which shows you how to solve a common problem:
+## Basic use examples
 
 ```{r example}
 library(sciColours)
 library(ggplot2)
 
+# sci_pal requires to select the palette (default is "main")  followed by the number of colours 
+sci_pal()(2)
+sci_pal(palette= "main")(2)
+sci_pal(palette= "secondary")(3)
+
+# scale_colour_sci can be added to the ggplot object
 ggplot(iris, aes(Sepal.Width, Sepal.Length, colour = Species)) +
   geom_point(size = 4) +
   sciColours::scale_colour_sci()
 
+# same for scale_fill_sci
 ggplot(mpg, aes(manufacturer, fill = manufacturer)) +
     geom_bar() +
     theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
     scale_fill_sci(palette = "main", guide = "none")
-## basic example code
+
 ```
 
-Text!
